cargo-features = ["edition2024"]

[package]
name = "robot"
version = "0.1.0"
edition = "2024"
authors = ["Sammy L. Koch"]

[profile.dev]
panic = "abort"   # unwind is unavailable
strip = "symbols" # greatly reduces binary size

[profile.release]
# inherits = "release"
opt-level = 3
panic = "abort"
strip = "symbols"
lto = true
codegen-units = 1
rpath = true

[dependencies]
anyhow = "1.0.86"
exitcode = "1.1.2"
nix = { version = "0.29.0", features = ["fs"] }
tinyjson = "2.5.1"
